changed change log dialog to an activity

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -39,37 +39,43 @@
 		<item>#07a863 #5be8ab #f5aa0b #fccb63 #c10878 #ee5eb6</item>
 	</string-array>
 	<string-array name="changelog">
-	    <item>* Fixed force-close on return from entering transaction\n
-	        * Improved Quicken import and export methods (Premium)\n
-	        * Added messages when no or low external storage is available\n
-	        * Added message to tell user how many rows were imported (Premium)\n
-	        * Fixed date entries when going back and creating another chart (Premium)
+	    <item>\n
+&#8226; Fixed force-close on return from entering transaction\n
+&#8226; Improved Quicken import and export methods (Premium)\n
+&#8226; Added messages when no or low external storage is available\n
+&#8226; Added message to tell user how many rows were imported (Premium)\n
+&#8226; Fixed date entries when going back and creating another chart (Premium)
 	    </item>
-		<item>* Fixed total balance calculation\n
-			* Fixed force-close on open
+		<item>\n
+&#8226; Fixed total balance calculation\n
+&#8226; Fixed force-close on open
     	</item>
-		<item>* Added import and export of CSV and Quicken files (Premium)\n
-			* Added custom colors for transactions (Premium)\n
-			* Added charting across multiple accounts (Premium)\n
-			* Added support for large fonts\n
-			* Added new color schemes\n
-			* Added option to color backgrounds instead of text\n
-			* Added option to color negative balances in red\n
-			* Added option to display total balance
+		<item>\n
+&#8226; Added import and export of CSV and Quicken files (Premium)\n
+&#8226; Added custom colors for transactions (Premium)\n
+&#8226; Added charting across multiple accounts (Premium)\n
+&#8226; Added support for large fonts\n
+&#8226; Added new color schemes\n
+&#8226; Added option to color backgrounds instead of text\n
+&#8226; Added option to color negative balances in red\n
+&#8226; Added option to display total balance
 	    </item>
-		<item>* Fixed database backup issue where the parent directory wasn’t being created
+		<item>\n
+&#8226; Fixed database backup issue where the parent directory wasn’t being created
 		</item>
-		<item>* Removed app-based update checking\n
-			* Fixed bug in database backup which destroyed repeat schedules\n
-			* Improved database backup procedure\n
-			* Added on-demand repeat feature as a context menu item for transactions\n
-			* Added shortcut keys for transaction menu
+		<item>\n
+&#8226; Removed app-based update checking\n
+&#8226; Fixed bug in database backup which destroyed repeat schedules\n
+&#8226; Improved database backup procedure\n
+&#8226; Added on-demand repeat feature as a context menu item for transactions\n
+&#8226; Added shortcut keys for transaction menu
 		</item>
-		<item>* Fixed bug regarding scheduling repeating transactions.\n
-			* Fixed bug regarding PIN screen being bypassed when launched from the
-			recent applications menu.
+		<item>\n
+&#8226; Fixed bug regarding scheduling repeating transactions.\n
+&#8226; Fixed bug regarding PIN screen being bypassed when launched from the recent applications menu.
 		</item>
-		<item>* improved database backup procedure.
+		<item>\n
+&#8226; improved database backup procedure
 		</item>
 	</string-array>
 	<string-array name="versions">
