--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -40,11 +40,19 @@
 	</string-array>
 	<string-array name="changelog">
 	    <item>\n
-&#8226; Fixed issue with account balances not updating after initial balance was changed
-&#8226; Improved monetary entry methods, fixed locale detection parts
-&#8226; Fixed premium activities to allow for widescreen view (Premium)</item>
+&#8226; Improved currency entry method\n
+&#8226; Fixed an error with restoring databases\n
+&#8226; Improved Quicken import methods (Premium)\n
+&#8226; Fixed a bug that caused a crash when no file to import was selected (Premium)\n
+        </item>
 	    <item>\n
-&#8226; Returning from import now shows imported transactions properly (Premium)</item>
+&#8226; Fixed issue with account balances not updating after initial balance was changed\n
+&#8226; Improved monetary entry methods, fixed locale detection parts\n
+&#8226; Fixed premium activities to allow for widescreen view (Premium)
+        </item>
+	    <item>\n
+&#8226; Returning from import now shows imported transactions properly (Premium)
+        </item>
 	    <item>\n
 &#8226; Fixed force-close on return from entering transaction\n
 &#8226; Improved Quicken import and export methods (Premium)\n
@@ -85,6 +93,7 @@
 		</item>
 	</string-array>
 	<string-array name="versions">
+	    <item>2.0.5</item>
 	    <item>2.0.4</item>
 	    <item>2.0.3</item>
 	    <item>2.0.2</item>
