--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -42,6 +42,7 @@
 	    <item>\n
 &#8226; Fixed currency entry issues with CLIQ and Moment physical keyboards\n
 &#8226; Improved transaction list screen\n
+&#8226; Added support for more QIF import cases (Premium)\n
 	    </item>
 	    <item>\n
 &#8226; Improved currency entry method\n
