--- a/res/layout/account_edit.xml
+++ b/res/layout/account_edit.xml
@@ -9,41 +9,41 @@
 			android:layout_width="fill_parent">
 			<TextView android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:id="@+id/NameLabel"
-				android:text="@string/acct_name" android:minWidth="100px"
-				android:hint="@string/acct_name"></TextView>
+				android:text="@string/acct_name" android:minWidth="100dip"
+				android:hint="@string/acct_name" />
 			<EditText android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:id="@+id/NameEdit"
-				android:layout_marginLeft="10px" android:layout_weight="2"
-				android:inputType="textCapWords" android:hint="@string/acct_name"></EditText>
+				android:layout_marginLeft="10dip" android:layout_weight="2"
+				android:inputType="textCapWords" android:hint="@string/acct_name" />
 		</TableRow>
 		<TableRow android:layout_height="wrap_content" android:id="@+id/BalanceRow"
 			android:layout_width="fill_parent">
 			<TextView android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:id="@+id/BalanceLabel"
-				android:text="@string/acct_bal" android:minWidth="100px"></TextView>
+				android:text="@string/acct_bal" android:minWidth="100dip" />
 			<EditText android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:id="@+id/BalanceEdit"
-				android:layout_marginLeft="10px" android:layout_weight="2"
-				android:hint="@string/acct_bal" android:inputType="phone"></EditText>
+				android:layout_marginLeft="10dip" android:layout_weight="2"
+				android:hint="@string/acct_bal" android:inputType="phone" />
 		</TableRow>
 		<TableRow android:layout_height="wrap_content"
 			android:layout_width="fill_parent" android:id="@+id/PriorityRow">
 			<TextView android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:minWidth="100px"
-				android:id="@+id/PriorityLabel" android:text="@string/acct_priority"></TextView>
+				android:layout_height="wrap_content" android:minWidth="100dip"
+				android:id="@+id/PriorityLabel" android:text="@string/acct_priority" />
 			<EditText android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:layout_marginLeft="10px"
+				android:layout_height="wrap_content" android:layout_marginLeft="10dip"
 				android:layout_weight="2" android:id="@+id/PriorityEdit"
-				android:inputType="number" android:hint="@string/acct_priority"></EditText>
+				android:inputType="number" android:hint="@string/acct_priority" />
 		</TableRow>
 	</TableLayout>
 	<LinearLayout android:id="@+id/LinearLayout01"
 		android:layout_height="wrap_content" android:layout_width="fill_parent">
 		<Button android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:id="@+id/SaveButton"
-			android:text="@string/save" android:layout_weight="1"></Button>
+			android:text="@string/save" android:layout_weight="1" />
 		<Button android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:id="@+id/CancelButton"
-			android:text="@string/cancel" android:layout_weight="1"></Button>
+			android:text="@string/cancel" android:layout_weight="1" />
 	</LinearLayout>
 </LinearLayout>
