--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -15,18 +15,18 @@
 	</LinearLayout>
 	<ListView android:layout_height="wrap_content" android:id="@android:id/list"
 		android:layout_width="fill_parent" android:layout_weight="100"
-		android:paddingRight="5px">
+		android:paddingRight="5dip">
 	</ListView>
 	<TextView android:layout_height="wrap_content" android:id="@android:id/empty"
 		android:text="Use the menu to add new transactions."
 		android:layout_width="fill_parent" android:layout_weight="100"
-		android:textSize="24px" android:gravity="center"></TextView>
+		android:textSize="24dip" android:gravity="center"></TextView>
 	<LinearLayout android:layout_height="wrap_content"
 		android:id="@+id/BalanceLayout" android:layout_width="fill_parent">
 		<LinearLayout android:id="@+id/LinearLayout01"
 			android:layout_width="wrap_content" android:layout_weight="1"
 			android:layout_height="fill_parent" android:orientation="vertical"
-			android:layout_marginLeft="3px">
+			android:layout_marginLeft="3dip">
 			<TextView android:layout_height="wrap_content"
 				android:layout_weight="1" android:id="@+id/BalText1"
 				android:gravity="top|left" android:lines="1" android:text="@string/trans_posted"
@@ -51,7 +51,7 @@
 		<LinearLayout android:id="@+id/LinearLayout03"
 			android:layout_width="wrap_content" android:layout_weight="1"
 			android:layout_height="fill_parent" android:orientation="vertical"
-			android:gravity="top|right" android:layout_marginRight="3px">
+			android:gravity="top|right" android:layout_marginRight="3dip">
 			<TextView android:layout_height="wrap_content"
 				android:layout_weight="1" android:id="@+id/BalText3"
 				android:gravity="top|right" android:lines="1" android:text="@string/trans_budget"
