--- a/res/layout/main_large.xml
+++ b/res/layout/main_large.xml
@@ -15,25 +15,25 @@
 	</LinearLayout>
 	<ListView android:layout_height="wrap_content" android:id="@android:id/list"
 		android:layout_width="fill_parent" android:layout_weight="100"
-		android:paddingRight="5px" />
+		android:paddingRight="5dip" />
 	<TextView android:layout_height="wrap_content" android:id="@android:id/empty"
 		android:text="Use the menu to add new transactions."
 		android:layout_width="fill_parent" android:layout_weight="100"
-		android:textSize="24px" android:gravity="center" />
+		android:textSize="24dip" android:gravity="center" />
 	<LinearLayout android:layout_height="wrap_content"
 		android:id="@+id/BalanceLayout" android:layout_width="fill_parent">
 		<LinearLayout android:id="@+id/LinearLayout01"
 			android:layout_width="wrap_content" android:layout_weight="1"
 			android:layout_height="fill_parent" android:orientation="vertical"
-			android:layout_marginLeft="3px">
+			android:layout_marginLeft="3dip">
 			<TextView android:layout_height="wrap_content"
 				android:layout_weight="1" android:id="@+id/BalText1"
 				android:gravity="top|left" android:lines="1" android:text="@string/trans_posted"
-				android:layout_width="fill_parent" android:textSize="16px" />
+				android:layout_width="fill_parent" android:textSize="16dip" />
 			<TextView android:layout_height="wrap_content"
 				android:gravity="top|left" android:lines="1" android:text="$0.00"
 				android:layout_width="fill_parent" android:layout_weight="1"
-				android:id="@+id/postedValue" android:textSize="16px" />
+				android:id="@+id/postedValue" android:textSize="16dip" />
 		</LinearLayout>
 		<LinearLayout android:id="@+id/LinearLayout02"
 			android:layout_width="wrap_content" android:layout_height="fill_parent"
@@ -43,24 +43,24 @@
 				android:layout_weight="1" android:id="@+id/BalText2"
 				android:gravity="top|center_horizontal" android:lines="1"
 				android:text="@string/trans_balance" android:layout_width="fill_parent"
-				android:textSize="16px" />
+				android:textSize="16dip" />
 			<TextView android:layout_height="wrap_content" android:text="$0.00"
 				android:layout_width="fill_parent" android:gravity="top|center_horizontal"
 				android:layout_weight="1" android:id="@+id/balanceValue"
-				android:textSize="16px" />
+				android:textSize="16dip" />
 		</LinearLayout>
 		<LinearLayout android:id="@+id/LinearLayout03"
 			android:layout_width="wrap_content" android:layout_weight="1"
 			android:layout_height="fill_parent" android:orientation="vertical"
-			android:gravity="top|right" android:layout_marginRight="3px">
+			android:gravity="top|right" android:layout_marginRight="3dip">
 			<TextView android:layout_height="wrap_content"
 				android:layout_weight="1" android:id="@+id/BalText3"
 				android:gravity="top|right" android:lines="1" android:text="@string/trans_budget"
-				android:layout_width="fill_parent" android:textSize="16px" />
+				android:layout_width="fill_parent" android:textSize="16dip" />
 			<TextView android:layout_height="wrap_content" android:text="$0.00"
 				android:gravity="top|right" android:layout_width="fill_parent"
 				android:layout_weight="1" android:id="@+id/budgetValue"
-				android:textSize="16px" />
+				android:textSize="16dip" />
 		</LinearLayout>
 	</LinearLayout>
 </LinearLayout>
