--- a/res/layout/trans_row_narrow_large.xml
+++ b/res/layout/trans_row_narrow_large.xml
@@ -12,19 +12,19 @@
 		<TextView android:layout_height="wrap_content" android:id="@+id/PartyText"
 			android:layout_width="fill_parent" android:ellipsize="end"
 			android:gravity="top|left" android:lines="1" android:maxLines="1"
-			android:text="Wilmington Trust Company" android:textSize="24px" />
+			android:text="Wilmington Trust Company" android:textSize="24dip" />
 		<LinearLayout android:id="@+id/LinearLayout03"
 			android:layout_height="wrap_content" android:layout_width="fill_parent"
-			android:layout_marginTop="-5px">
+			android:layout_marginTop="-5dip">
 			<TextView android:layout_height="wrap_content" android:text="2008-10-01"
 				android:id="@+id/DateText" android:layout_gravity="left|center_vertical"
 				android:layout_width="wrap_content" android:layout_weight="2"
-				android:textSize="16px" />
+				android:textSize="16dip" />
 			<TextView android:layout_width="wrap_content" android:text="215.00"
 				android:gravity="right" android:id="@+id/AmountText"
-				android:layout_height="fill_parent" android:paddingRight="7px"
+				android:layout_height="fill_parent" android:paddingRight="7dip"
 				android:singleLine="false" android:maxLines="1" android:lines="1"
-				android:layout_weight="1" android:textSize="16px" />
+				android:layout_weight="1" android:textSize="16dip" />
 		</LinearLayout>
 	</LinearLayout>
 </LinearLayout>
