--- a/res/layout/trans_row_wide_large.xml
+++ b/res/layout/trans_row_wide_large.xml
@@ -13,23 +13,23 @@
 			<TextView android:layout_width="wrap_content" android:text="Wilmington Trust Company"
 				android:id="@+id/PartyText" android:gravity="left"
 				android:layout_gravity="left|center_vertical" android:maxLines="1"
-				android:lines="1" android:ellipsize="end" android:maxWidth="250px"
-				android:layout_height="fill_parent" android:textSize="24px" />
+				android:lines="1" android:ellipsize="end" android:maxWidth="250dip"
+				android:layout_height="fill_parent" android:textSize="24dip" />
 		</LinearLayout>
 		<LinearLayout android:id="@+id/LinearLayout03"
 			android:layout_height="wrap_content" android:layout_width="fill_parent"
-			android:layout_marginTop="-5px">
+			android:layout_marginTop="-5dip">
 			<TextView android:layout_width="wrap_content" android:text="2008-10-01"
 				android:id="@+id/DateText" android:ellipsize="end"
-				android:layout_gravity="left|center_vertical" android:paddingRight="0px"
-				android:minWidth="100px" android:maxWidth="100px"
-				android:layout_height="fill_parent" android:textSize="16px" />
+				android:layout_gravity="left|center_vertical" android:paddingRight="0dip"
+				android:minWidth="100dip" android:maxWidth="100dip"
+				android:layout_height="fill_parent" android:textSize="16dip" />
 			<TextView android:text="215.00" android:gravity="right"
-				android:id="@+id/AmountText" android:paddingRight="5px"
+				android:id="@+id/AmountText" android:paddingRight="5dip"
 				android:layout_gravity="right|center_vertical"
 				android:layout_weight="1" android:layout_height="fill_parent"
-				android:minWidth="100px" android:layout_width="wrap_content"
-				android:textSize="16px" />
+				android:minWidth="100dip" android:layout_width="wrap_content"
+				android:textSize="16dip" />
 		</LinearLayout>
 	</LinearLayout>
 </LinearLayout>
