--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -40,6 +40,9 @@
 	</string-array>
 	<string-array name="changelog">
 	    <item>\n
+&#8226; Added option for a primary account which bypasses the account screen\n
+	    </item>
+	    <item>\n
 &#8226; Improved display for devices with larger/denser screens\n
 &#8226; Fixed currency entry issues with 3-row physical keyboards\n
 	    </item>
@@ -102,6 +105,7 @@
 		</item>
 	</string-array>
 	<string-array name="versions">
+	    <item>2.1.0</item>
 	    <item>2.0.7</item>
 	    <item>2.0.6</item>
 	    <item>2.0.5</item>
