--- a/res/layout/account_edit.xml
+++ b/res/layout/account_edit.xml
@@ -36,6 +36,12 @@
 				android:layout_weight="2" android:id="@+id/PriorityEdit"
 				android:inputType="number" android:hint="@string/acct_priority" />
 		</TableRow>
+		<TableRow android:layout_height="wrap_content"
+			android:layout_width="fill_parent" android:id="@+id/PriorityRow">
+			<CheckBox android:id="@+id/PrimaryCheckBox" android:layout_weight="1"
+				android:layout_marginLeft="10dip" android:layout_width="wrap_content"
+				android:layout_height="wrap_content" android:text="@string/primary_label" />
+		</TableRow>
 	</TableLayout>
 	<LinearLayout android:id="@+id/LinearLayout01"
 		android:layout_height="wrap_content" android:layout_width="fill_parent">
