changed order of items for account context menus

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -41,6 +41,7 @@
 	<string-array name="changelog">
 	    <item>\n
 &#8226; Added option for a primary account which bypasses the account screen\n
+&#8226; Changed order of items for account context menus\n
 	    </item>
 	    <item>\n
 &#8226; Improved display for devices with larger/denser screens\n
