--- a/res/xml/settings.xml
+++ b/res/xml/settings.xml
@@ -33,28 +33,28 @@
 			<CheckBoxPreference
 				android:summary="Use colors set here instead of the system defaults."
 				android:key="use_custom_colors" android:title="Use Custom Colors" />
-			<net.gumbercules.loot.ColorPickerPreference
+			<net.gumbercules.loot.preferences.ColorPickerPreference
 				android:summary="Color to paint a withdraw transaction."
 				android:dialogTitle="Withdraw Color" android:dialogMessage="Color to paint a withdraw transaction."
 				android:title="Withdraw Color" android:key="color_withdraw" />
-			<net.gumbercules.loot.ColorPickerPreference
+			<net.gumbercules.loot.preferences.ColorPickerPreference
 				android:summary="Color to paint a budgeted withdraw transaction."
 				android:dialogTitle="Budget Withdraw Color"
 				android:dialogMessage="Color to paint a budgeted withdraw transaction."
 				android:title="Budget Withdraw Color" android:key="color_budget_withdraw" />
-			<net.gumbercules.loot.ColorPickerPreference
+			<net.gumbercules.loot.preferences.ColorPickerPreference
 				android:summary="Color to paint a deposit transaction."
 				android:dialogTitle="Deposit Color" android:dialogMessage="Color to paint a deposit transaction."
 				android:title="Deposit Color" android:key="color_deposit" />
-			<net.gumbercules.loot.ColorPickerPreference
+			<net.gumbercules.loot.preferences.ColorPickerPreference
 				android:summary="Color to paint a budgeted deposit transaction."
 				android:dialogTitle="Budget Deposit Color" android:dialogMessage="Color to paint a budgeted deposit transaction."
 				android:title="Budget Deposit Color" android:key="color_budget_deposit" />
-			<net.gumbercules.loot.ColorPickerPreference
+			<net.gumbercules.loot.preferences.ColorPickerPreference
 				android:summary="Color to paint a check transaction."
 				android:dialogTitle="Check Color" android:dialogMessage="Color to paint a check transaction."
 				android:title="Check Color" android:key="color_check" />
-			<net.gumbercules.loot.ColorPickerPreference
+			<net.gumbercules.loot.preferences.ColorPickerPreference
 				android:summary="Color to paint a budgeted check transaction."
 				android:dialogTitle="Budget Check Color" android:dialogMessage="Color to paint a budgeted check transaction."
 				android:title="Budget Check Color" android:key="color_budget_check" />
@@ -65,7 +65,7 @@
 		<CheckBoxPreference android:defaultValue="false"
 			android:title="Colors" android:key="color"
 			android:summary="Display transactions in color based on type." />
-		<net.gumbercules.loot.ColorSchemePreference
+		<net.gumbercules.loot.preferences.ColorSchemePreference
 			android:title="Color Scheme" android:key="color_scheme"
 			android:summary="Choose the colors to paint the transactions."
 			android:dependency="color" />
