--- a/res/layout/repeat_row.xml
+++ b/res/layout/repeat_row.xml
@@ -6,30 +6,35 @@
 		android:layout_height="wrap_content" android:layout_width="fill_parent">
 		<TextView android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:layout_weight="4"
-			android:id="@+id/party_text" android:text="PAAAAARTY" />
+			android:id="@+id/party_text" android:text="PAAAAARTY"
+			android:ellipsize="end" android:textSize="20dip" android:lines="1" />
 		<TextView android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:layout_weight="1"
 			android:id="@+id/amount_text" android:text="$1.23" android:gravity="right"
-			android:paddingRight="7dip" />
+			android:paddingRight="7dip" android:textSize="20dip" android:lines="1"
+			android:minWidth="100dip" />
 	</LinearLayout>
 	<LinearLayout android:id="@+id/LinearLayout02"
 		android:layout_height="wrap_content" android:layout_width="fill_parent">
 		<TextView android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:layout_weight="3"
-			android:id="@+id/account_text" android:text="Account Savings" />
+			android:id="@+id/account_text" android:text="Account Savings"
+			android:ellipsize="end" android:textSize="20dip" android:lines="1" />
 		<TextView android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:layout_weight="2"
 			android:gravity="right" android:text="2010-02-19"
-			android:paddingRight="5dip" android:id="@+id/begin_date_text" />
+			android:paddingRight="5dip" android:id="@+id/begin_date_text"
+			android:textSize="20dip" android:lines="1" android:minWidth="145dip" />
 	</LinearLayout>
 	<LinearLayout android:id="@+id/LinearLayout02"
 		android:layout_height="wrap_content" android:layout_width="fill_parent">
 		<TextView android:layout_height="wrap_content" android:id="@+id/repeat_text"
 			android:text="Weekly" android:layout_width="wrap_content"
-			android:layout_weight="3" />
+			android:layout_weight="3" android:textSize="20dip" android:lines="1" />
 		<TextView android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:layout_weight="2"
 			android:gravity="right" android:text="2010-02-19"
-			android:paddingRight="5dip" android:id="@+id/end_date_text" />
+			android:paddingRight="5dip" android:id="@+id/end_date_text"
+			android:textSize="20dip" android:lines="1" android:minWidth="145dip" />
 	</LinearLayout>
 </LinearLayout>
