--- a/res/layout/trans.xml
+++ b/res/layout/trans.xml
@@ -80,6 +80,17 @@
 						android:layout_height="wrap_content" android:layout_weight="2"
 						android:id="@+id/accountSpinner" />
 				</TableRow>
+                <TableRow android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" android:visibility="gone"
+                    android:id="@+id/repeatAccountRow">
+                    <TextView android:layout_width="wrap_content"
+                        android:layout_height="fill_parent" android:gravity="left|center_vertical"
+                        android:id="@+id/repeatAccountLabel" android:minWidth="65dip"
+                        android:text="@string/trans_account" />
+                    <Spinner android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" android:layout_weight="2"
+                        android:id="@+id/repeatAccountSpinner" />
+                </TableRow>
 				<TableRow android:layout_width="wrap_content"
 					android:layout_height="wrap_content" android:id="@+id/checkRow">
 					<TextView android:layout_width="wrap_content"
