--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -51,7 +51,8 @@
 &#8226; Added option for a primary account which bypasses the account screen\n
 &#8226; Changed order of items for account context menus\n
 &#8226; Added option to change on-screen keyboard input type\n
-&#8226; Fixed issue with incorrectly reporting the space available on SD cards &gt; 4GB in size
+&#8226; Fixed issue with incorrectly reporting the space available on SD cards &gt; 4GB in size\n
+&#8226; Added a menu option to manage repeating transactions\n
 	    </item>
 	    <item>\n
 &#8226; Improved display for devices with larger/denser screens\n
