--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -27,7 +27,7 @@
 	</LinearLayout>
 	<ListView android:layout_height="wrap_content" android:id="@android:id/list"
 		android:layout_width="fill_parent" android:layout_weight="100"
-		android:paddingRight="5dip" />
+		android:paddingRight="5dip" android:fastScrollEnabled="true" />
 	<TextView android:layout_height="wrap_content" android:id="@android:id/empty"
 		android:text="Use the menu to add new transactions."
 		android:layout_width="fill_parent" android:layout_weight="100"
