--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -52,9 +52,10 @@
 &#8226; Changed order of items for account context menus\n
 &#8226; Added option to change on-screen keyboard input type\n
 &#8226; Fixed issue with incorrectly reporting the space available on SD cards &gt; 4GB in size\n
-&#8226; Added a menu option to manage repeating transactions\n
+&#8226; Added a menu option to delete repeating transactions (Premium version allows editing)\n
 &#8226; Changed the application icon (thanks, Jay!)\n
 &#8226; Added options in search menu for hiding transactions based on posted status\n
+&#8226; Enabled fast-scrolling on the transaction list\n
 	    </item>
 	    <item>\n
 &#8226; Improved display for devices with larger/denser screens\n
