--- a/res/layout/main_large.xml
+++ b/res/layout/main_large.xml
@@ -5,17 +5,29 @@
 	<LinearLayout android:layout_height="wrap_content"
 		android:layout_width="fill_parent" android:visibility="gone"
 		android:id="@+id/SearchLayout">
-		<MultiAutoCompleteTextView
-			android:layout_width="wrap_content" android:layout_weight="1"
-			android:id="@+id/SearchEdit" android:layout_height="fill_parent"
-			android:hint="Search" />
-		<ImageButton android:layout_width="wrap_content"
-			android:layout_height="wrap_content" android:id="@+id/ClearButton"
-			android:src="@android:drawable/ic_input_delete" />
+		<LinearLayout android:layout_height="wrap_content"
+			android:layout_width="fill_parent" android:orientation="horizontal">
+			<MultiAutoCompleteTextView
+				android:layout_width="wrap_content" android:layout_weight="1"
+				android:id="@+id/SearchEdit" android:layout_height="fill_parent"
+				android:hint="Search" />
+			<ImageButton android:layout_width="wrap_content"
+				android:layout_height="wrap_content" android:id="@+id/ClearButton"
+				android:src="@android:drawable/ic_input_delete" />
+		</LinearLayout>
+		<LinearLayout android:layout_height="wrap_content"
+			android:layout_width="fill_parent" android:orientation="horizontal">
+			<CheckBox android:text="@string/posted" android:id="@+id/show_posted"
+				android:layout_width="wrap_content" android:layout_height="wrap_content"
+				android:layout_weight="1" android:checked="true" />
+			<CheckBox android:text="@string/non_posted" android:id="@+id/show_non_posted"
+				android:layout_width="wrap_content" android:layout_height="wrap_content"
+				android:checked="true" />
+		</LinearLayout>
 	</LinearLayout>
 	<ListView android:layout_height="wrap_content" android:id="@android:id/list"
 		android:layout_width="fill_parent" android:layout_weight="100"
-		android:paddingRight="5dip" />
+		android:fastScrollEnabled="true" />
 	<TextView android:layout_height="wrap_content" android:id="@android:id/empty"
 		android:text="Use the menu to add new transactions."
 		android:layout_width="fill_parent" android:layout_weight="100"
