--- a/res/layout/trans.xml
+++ b/res/layout/trans.xml
@@ -80,17 +80,17 @@
 						android:layout_height="wrap_content" android:layout_weight="2"
 						android:id="@+id/accountSpinner" />
 				</TableRow>
-                <TableRow android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:visibility="gone"
-                    android:id="@+id/repeatAccountRow">
-                    <TextView android:layout_width="wrap_content"
-                        android:layout_height="fill_parent" android:gravity="left|center_vertical"
-                        android:id="@+id/repeatAccountLabel" android:minWidth="65dip"
-                        android:text="@string/trans_account" />
-                    <Spinner android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" android:layout_weight="2"
-                        android:id="@+id/repeatAccountSpinner" />
-                </TableRow>
+				<TableRow android:layout_width="wrap_content"
+					android:layout_height="wrap_content" android:visibility="gone"
+					android:id="@+id/repeatAccountRow">
+					<TextView android:layout_width="wrap_content"
+						android:layout_height="fill_parent" android:gravity="left|center_vertical"
+						android:id="@+id/repeatAccountLabel" android:minWidth="65dip"
+						android:text="@string/trans_account" />
+					<Spinner android:layout_width="wrap_content"
+						android:layout_height="wrap_content" android:layout_weight="2"
+						android:id="@+id/repeatAccountSpinner" />
+				</TableRow>
 				<TableRow android:layout_width="wrap_content"
 					android:layout_height="wrap_content" android:id="@+id/checkRow">
 					<TextView android:layout_width="wrap_content"
@@ -137,7 +137,21 @@
 							android:layout_weight="1" android:id="@+id/BudgetRadio" />
 					</RadioGroup>
 				</TableRow>
+				<TableRow android:layout_width="wrap_content"
+					android:layout_height="wrap_content" android:id="@+id/imageHeaderRow">
+					<TextView android:layout_width="wrap_content"
+						android:layout_height="wrap_content" android:gravity="left|center_vertical"
+						android:id="@+id/imageLabel" android:minWidth="65dip"
+						android:text="@string/receipts" android:layout_weight="1" />
+					<ImageView android:layout_width="wrap_content" android:id="@+id/addImage"
+						android:layout_height="wrap_content" android:src="@android:drawable/ic_input_add"
+						 android:layout_gravity="right|center_vertical" />
+				</TableRow>
 			</TableLayout>
+			<LinearLayout android:layout_width="fill_parent"
+				android:layout_height="wrap_content" android:orientation="vertical"
+				android:id="@+id/imageLayout">
+			</LinearLayout>
 		</LinearLayout>
 	</ScrollView>
 	<LinearLayout android:id="@+id/LinearLayout03"
