--- a/res/layout/trans_row_narrow.xml
+++ b/res/layout/trans_row_narrow.xml
@@ -1,30 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout android:id="@+id/LinearLayout01"
 	android:layout_height="wrap_content" xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent" android:orientation="horizontal">
+	android:layout_width="fill_parent" android:orientation="horizontal"
+	android:paddingRight="5dip">
 	<CheckBox android:layout_width="wrap_content"
 		android:layout_height="wrap_content" android:id="@+id/PostedCheckBox"
 		android:focusable="false" android:focusableInTouchMode="false"
-		android:layout_marginTop="-5dip" android:layout_marginBottom="-8dip"></CheckBox>
+		android:layout_marginTop="-5dip" android:layout_marginBottom="-8dip" />
 	<LinearLayout android:id="@+id/LinearLayout02"
 		android:layout_width="wrap_content" android:layout_height="fill_parent"
 		android:layout_weight="1" android:layout_gravity="left|center_vertical"
 		android:orientation="vertical">
-		<TextView android:layout_height="wrap_content" android:id="@+id/PartyText"
-			android:layout_width="fill_parent" android:ellipsize="end"
-			android:gravity="top|left" android:lines="1" android:maxLines="1"
-			android:text="Wilmington Trust Company" android:textSize="18dip"></TextView>
+		<LinearLayout android:id="@+id/LinearLayout04"
+			android:layout_height="wrap_content" android:layout_width="fill_parent">
+			<TextView android:layout_height="wrap_content" android:id="@+id/PartyText"
+				android:layout_width="wrap_content" android:ellipsize="end"
+				android:gravity="top|left" android:lines="1" android:maxLines="1"
+				android:text="Wilmington Trust Company" android:textSize="18dip"
+				android:layout_weight="1" />
+			<ImageView android:id="@+id/image_view"
+				android:layout_height="wrap_content" android:layout_width="wrap_content"
+				android:src="@drawable/ic_gallery" android:visibility="gone" />
+		</LinearLayout>
 		<LinearLayout android:id="@+id/LinearLayout03"
 			android:layout_height="wrap_content" android:layout_width="fill_parent"
 			android:layout_marginTop="-5dip">
 			<TextView android:layout_height="wrap_content" android:text="2008-10-01"
 				android:id="@+id/DateText" android:layout_gravity="left|center_vertical"
-				android:layout_width="wrap_content" android:layout_weight="2"></TextView>
+				android:layout_width="wrap_content" android:layout_weight="2" />
 			<TextView android:layout_width="wrap_content" android:text="215.00"
 				android:gravity="right" android:id="@+id/AmountText"
-				android:layout_height="fill_parent" android:paddingRight="7dip"
-				android:singleLine="false" android:maxLines="1" android:lines="1"
-				android:layout_weight="1"></TextView>
+				android:layout_height="fill_parent" android:singleLine="false"
+				android:maxLines="1" android:lines="1" android:layout_weight="1" />
 		</LinearLayout>
 	</LinearLayout>
 </LinearLayout>
