--- a/res/layout/trans_row_wide.xml
+++ b/res/layout/trans_row_wide.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent" android:layout_height="wrap_content"
-	android:orientation="horizontal" android:id="@+id/LinearLayout01">
+	android:orientation="horizontal" android:id="@+id/LinearLayout01"
+	android:paddingRight="5dip">
 	<CheckBox android:layout_width="wrap_content"
 		android:layout_height="wrap_content" android:id="@+id/PostedCheckBox"
 		android:layout_marginTop="-5dip" android:layout_marginBottom="-10dip"
-		android:focusable="false" android:focusableInTouchMode="false"></CheckBox>
+		android:focusable="false" android:focusableInTouchMode="false" />
 	<LinearLayout android:id="@+id/LinearLayout02"
 		android:layout_width="wrap_content" android:layout_height="fill_parent"
 		android:layout_weight="1" android:orientation="vertical">
@@ -15,7 +16,10 @@
 				android:id="@+id/PartyText" android:gravity="left"
 				android:layout_gravity="left|center_vertical" android:maxLines="1"
 				android:lines="1" android:ellipsize="end" android:maxWidth="250dip"
-				android:layout_height="fill_parent"></TextView>
+				android:layout_height="fill_parent" android:layout_weight="1" />
+			<ImageView android:id="@+id/image_view"
+				android:layout_height="wrap_content" android:layout_width="wrap_content"
+				android:src="@drawable/ic_gallery" android:visibility="gone" />
 		</LinearLayout>
 		<LinearLayout android:id="@+id/LinearLayout03"
 			android:layout_height="wrap_content" android:layout_width="fill_parent">
@@ -23,12 +27,11 @@
 				android:id="@+id/DateText" android:ellipsize="end"
 				android:layout_gravity="left|center_vertical" android:paddingRight="0dip"
 				android:minWidth="100dip" android:maxWidth="100dip"
-				android:layout_height="fill_parent"></TextView>
+				android:layout_height="fill_parent" />
 			<TextView android:text="215.00" android:gravity="right"
-				android:id="@+id/AmountText" android:paddingRight="5dip"
-				android:layout_gravity="right|center_vertical"
+				android:id="@+id/AmountText" android:layout_gravity="right|center_vertical"
 				android:layout_weight="1" android:layout_height="fill_parent"
-				android:minWidth="100dip" android:layout_width="wrap_content"></TextView>
+				android:minWidth="100dip" android:layout_width="wrap_content" />
 		</LinearLayout>
 	</LinearLayout>
 </LinearLayout>
