--- a/res/layout/trans_row_wide_large.xml
+++ b/res/layout/trans_row_wide_large.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent" android:layout_height="wrap_content"
-	android:orientation="horizontal" android:id="@+id/LinearLayout01">
+	android:orientation="horizontal" android:id="@+id/LinearLayout01"
+	android:paddingRight="5dip">
 	<CheckBox android:layout_width="wrap_content"
 		android:layout_height="wrap_content" android:id="@+id/PostedCheckBox"
 		android:focusable="false" android:focusableInTouchMode="false" />
@@ -14,7 +15,11 @@
 				android:id="@+id/PartyText" android:gravity="left"
 				android:layout_gravity="left|center_vertical" android:maxLines="1"
 				android:lines="1" android:ellipsize="end" android:maxWidth="250dip"
-				android:layout_height="fill_parent" android:textSize="24dip" />
+				android:layout_height="wrap_content" android:textSize="24dip"
+				android:layout_weight="1" />
+			<ImageView android:id="@+id/image_view"
+				android:layout_height="wrap_content" android:layout_width="wrap_content"
+				android:src="@drawable/ic_gallery" android:visibility="gone" />
 		</LinearLayout>
 		<LinearLayout android:id="@+id/LinearLayout03"
 			android:layout_height="wrap_content" android:layout_width="fill_parent"
@@ -25,8 +30,7 @@
 				android:minWidth="100dip" android:maxWidth="100dip"
 				android:layout_height="fill_parent" android:textSize="16dip" />
 			<TextView android:text="215.00" android:gravity="right"
-				android:id="@+id/AmountText" android:paddingRight="5dip"
-				android:layout_gravity="right|center_vertical"
+				android:id="@+id/AmountText" android:layout_gravity="right|center_vertical"
 				android:layout_weight="1" android:layout_height="fill_parent"
 				android:minWidth="100dip" android:layout_width="wrap_content"
 				android:textSize="16dip" />
